--- a/v_regular/Mocket/app/src/main/res/layout/fragment_more.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/fragment_more.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MemoryFragment"
+    tools:context=".MoreFragment"
     android:background="#efefef">
 
     <ScrollView
@@ -20,7 +20,7 @@
             android:layout_marginBottom="10dp">
 
             <LinearLayout
-                android:id="@+id/MEMORY_linearLayout_todaysMemory"
+                android:id="@+id/MORE_linearLayout_todaysMemory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
