--- a/v_regular/Mocket/app/src/main/res/layout/term_item.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/term_item.xml
@@ -9,11 +9,9 @@
         android:layout_height="wrap_content"
         android:weightSum="10"
         android:orientation="horizontal"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/bottom_gray_border">
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp">
         <LinearLayout
 
             android:layout_width="0dp"
@@ -39,17 +37,18 @@
         </LinearLayout>
 
         <RelativeLayout
+            android:id="@+id/TERMITEM_layout_editButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_weight="2">
+            android:layout_weight="2"
+            android:clickable="true">
             <ImageView
-                android:id="@+id/TERMITEM_edit_button"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_centerInParent="true"
-                android:src="@drawable/edit_icon"
-                android:clickable="true"/>
+                android:id="@+id/TERMITEM_editButton"
+                android:layout_width="17dp"
+                android:layout_height="17dp"
+                android:layout_centerInParent="true" />
+            <!--android:src="@drawable/edit_icon"-->
 
         </RelativeLayout>
     </LinearLayout>
