--- a/v_regular/Mocket/app/src/main/res/layout/activity_edit_profile.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/activity_edit_profile.xml
@@ -323,6 +323,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="30dp"
                 android:layout_height="60dp"
+                android:backgroundTint="@android:color/holo_red_light"
                 android:text="Delete Account"/>
 
         </LinearLayout>
