--- a/v_regular/Mocket/app/src/main/res/values/styles.xml
+++ b/v_regular/Mocket/app/src/main/res/values/styles.xml
@@ -14,4 +14,13 @@
         <item name="colorAccent">@color/mocket_dark_purple</item>
     </style>
 
+    <style name="Theme.AppCompat.Translucent" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:background">#50000000</item> <!-- Or any transparency or color you need -->
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+    </style>
+
 </resources>
