--- a/v_regular/Mocket/app/src/main/res/values/colors.xml
+++ b/v_regular/Mocket/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="mocket_dark_purple">#230744</color>
     <color name="clicked_category">#8e7cc3</color>
     <color name="background_category">#ededed</color>
+    <color name="correct_green">#499a25</color>
 </resources>
