--- a/v_regular/Mocket/app/src/main/res/layout/fragment_more.xml
+++ b/v_regular/Mocket/app/src/main/res/layout/fragment_more.xml
@@ -196,6 +196,33 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
+                    android:layout_height="25dp"
+                    android:orientation="horizontal"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginRight="20dp"
+                    android:weightSum="10">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="7"
+                        android:paddingLeft="30dp"
+                        android:text="Vibration"
+                        android:textColor="#000000"
+                        android:textStyle="bold"
+                        android:textSize="17dp"/>
+                    <Spinner
+                        android:id="@+id/MORE_spinner_vibration"
+                        android:layout_width="0dp"
+                        android:paddingRight="30dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="3" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:orientation="horizontal"
                     android:layout_marginTop="10dp"
